--- a/responsive.css
+++ b/responsive.css
@@ -3,6 +3,12 @@
         background-color: red;
     } */
 
+    /* html,
+    body {
+        width: 100%;
+        overflow-x: hidden;
+    } */
+
     /* home */
     .nav-menu {
         visibility: hidden;
@@ -46,7 +52,7 @@
     }
 
     h2 {
-        margin-top: 120px;
+        margin-top: 49px;
     }
 
     .About-menu {
@@ -85,7 +91,7 @@
         width: 100%;
         height: 96%;
         justify-content: unset;
-        margin: 44px 0 110px;
+        margin: 44px 0 49px;
         flex-direction: column;
         position: relative;
     }
@@ -129,18 +135,23 @@
     }
 
     .service-item {
-        width: 93%;
+        width: 100%;
     }
 
     /* skill */
     .using-learning-other {
-        width: 104%;
+       max-width: 100%;
     }
 
     /* Contaxt me */
 
     #Contact {
-        height: 142vh;
+       height: 120vh;
+       gap: 15px;
+    }
+
+    #Contact h2 {
+        margin: unset;
     }
 
 
@@ -209,7 +220,7 @@
     }
 
     h2 {
-        margin-top: 120px;
+        margin-top: 90px;
     }
 
     .About-menu {
@@ -239,9 +250,9 @@
 
     .details {
         width: 100%;
-        height: 96%;
+        height: 65%;
         justify-content: unset;
-        margin: 44px 0 110px;
+        margin: 44px 0 31px;
         flex-direction: column;
         position: relative;
     }
@@ -298,11 +309,11 @@
 
     /* skill */
     #Skill {
-        height: 118vh;
+       height: 85vh;
     }
 
     .using-learning-other {
-        width: 104%;
+        max-width: 100%;
     }
 
     /* Contaxt me */
@@ -332,26 +343,29 @@
     nav {
         justify-content: space-evenly;
     }
+
     .nav-menu {
         width: 64%;
         gap: 10px;
-        }
-
-        /* about  */
-    #About {
-    width: 100%;
-    height: 162vh;
     }
+
+    /* about  */
+    #About {
+        width: 100%;
+        height: 162vh;
+    }
+
     .About-menu {
-    width: 85%;
-    height: 64%;
-	justify-content: space-between;
+        width: 85%;
+        height: 64%;
+        justify-content: space-between;
     }
 
     .profie {
         width: 29%;
         height: 52%;
     }
+
     .profie img {
         height: 100%;
     }
@@ -365,30 +379,31 @@
     /* service  */
 
     #Service {
-    width: 100%;
-    height: 133vh;
-	justify-content: space-evenly;
+        width: 100%;
+        height: 133vh;
+        justify-content: space-evenly;
     }
 
     .service-container {
-    width: 84%;
-    height: 76%;
-	flex-wrap: wrap;
-    gap: 23px;
+        width: 84%;
+        height: 76%;
+        flex-wrap: wrap;
+        gap: 23px;
     }
 
     .service-item {
-    width: 47%;
-    height: 258px;
+        width: 47%;
+        height: 258px;
     }
 
 
     #Contact {
         height: 111vh;
     }
+
     #Contact form {
-    width: 70%;
-    height: 61%;
+        width: 70%;
+        height: 61%;
     }
 
 }
